@startuml
'left to right direction

title __UserManagement Class Diagram__\n

  namespace at.fhj.swd {
    abstract class at.fhj.swd.Entity {
    -id:int
    +<<constructor>Entity()
    +getId():int
    +setId(int):void
    +equals(Object):boolean
    +hashCode():int
    +toString():String
    }
  }
  

  namespace at.fhj.swd {
    class at.fhj.swd.Group {
    -name:String
    +<<constructor>>Group(int,String)
    +getUsers():List<User>
    +addUser(User):void
    +getName():String
    +setName(String):void
    +toString():String
    }
  }
  

  namespace at.fhj.swd {
    class at.fhj.swd.User {
    -username:String
    -password:String
    +<<constructor>>User(int,String,String)
    +getGroup():Group
    +setGroup(Group):void
    +getUsername():String
    +setUsername(String):void
    +getPassword():String
    +setPassword(String):void
    +toString():String
    }
  }
  

  at.fhj.swd.Group -up-|> at.fhj.swd.Entity
  at.fhj.swd.User -up-|> at.fhj.swd.Entity
  at.fhj.swd.User --> "0..1" at.fhj.swd.Group : -group
  at.fhj.swd.Group --> "0..*" at.fhj.swd.User : -users

right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
